# gcmake

./: README.md  all.sh  gcmake-build-test-cross-executable.sh  gcmake-build-test-cross-interface-library.sh  gcmake-build-test-cross-shared-library.sh  gcmake-build-test-cross-static-library.sh  gcmake-build-test-local-executable.sh  gcmake-build-test-local-interface-library.sh  gcmake-build-test-local-shared-library.sh  gcmake-build-test-local-static-library.sh  gcmake-build-test-multi-test.sh  gcmake-build.sh  zgcmake-delete.sh  zgcmake-deploy.sh  zgcmake-release.sh
gcmake-build/: Bug.txt  CMakeLists.txt  Config.cmake.in  Improvement.txt  LICENSE  README.md  TODO.txt  build.sh  zdelete.sh  zdeploy.sh  zrelease.sh
gcmake-build-test/cross/gcmake-build-test-executable/: CMakeLists.txt  Gcmake.properties  build.sh
gcmake-build-test/cross/gcmake-build-test-executable/source/: app.cpp
gcmake-build-test/cross/gcmake-build-test-interface-library/: CMakeLists.txt  Gcmake.properties  build.sh
gcmake-build-test/cross/gcmake-build-test-interface-library/include/gcmake/build-test-interface-library/: interface.h
gcmake-build-test/cross/gcmake-build-test-interface-library/test/: test.cpp
gcmake-build-test/cross/gcmake-build-test-shared-library/: CMakeLists.txt  Gcmake.properties  build.sh
gcmake-build-test/cross/gcmake-build-test-shared-library/include/: public_shared.h
gcmake-build-test/cross/gcmake-build-test-shared-library/source/: private_shared.hpp  shared.c  shared.cpp
gcmake-build-test/cross/gcmake-build-test-shared-library/test/: private.hpp  test.cpp  test_c.cpp
gcmake-build-test/cross/gcmake-build-test-static-library/: CMakeLists.txt  Gcmake.properties  build.sh
gcmake-build-test/cross/gcmake-build-test-static-library/source/: private_static.hpp  static.c
gcmake-build-test/gcmake-build-test-multi-test/: CMakeLists.txt  Gcmake.properties  build.sh
gcmake-build-test/gcmake-build-test-multi-test/test_1/: CMakeLists.txt
gcmake-build-test/gcmake-build-test-multi-test/test_2/: CMakeLists.txt
gcmake-build-test/gcmake-build-test-multi-test/test_2/test/: private.cpp  test.cpp
gcmake-build-test/local/gcmake-build-test-executable/: CMakeLists.txt  Gcmake.properties  build.sh
gcmake-build-test/local/gcmake-build-test-executable/source/: app.cpp  private.h
gcmake-build-test/local/gcmake-build-test-interface-library/: CMakeLists.txt  Gcmake.properties  build.sh
gcmake-build-test/local/gcmake-build-test-interface-library/include/gcmake/build-test-interface-library/: interface.hpp
gcmake-build-test/local/gcmake-build-test-interface-library/source/: interface.c  interface.cpp
gcmake-build-test/local/gcmake-build-test-interface-library/test/: private.c
gcmake-build-test/local/gcmake-build-test-shared-library/: CMakeLists.txt  Gcmake.properties  build.sh
gcmake-build-test/local/gcmake-build-test-shared-library/include/: public_shared.h  public_shared.hpp
gcmake-build-test/local/gcmake-build-test-shared-library/source/: private_shared.h  shared.c  shared.cpp
gcmake-build-test/local/gcmake-build-test-shared-library/test/: test.cpp  test_c.cpp
gcmake-build-test/local/gcmake-build-test-static-library/: CMakeLists.txt  Gcmake.properties  build.sh
gcmake-build-test/local/gcmake-build-test-static-library/include/: public_static.h  public_static.hpp
gcmake-build-test/local/gcmake-build-test-static-library/source/: private_static.h  static.cpp
gcmake-build-test/local/gcmake-build-test-static-library/test/: test.cpp
gcmake-build/module/: Config.cmake.in  Gcmake.environments.cmake  Gcmake.functions.cmake  Gcmake.install.cmake  Gcmake.package.cmake  Gcmake.parse.cmake  Gcmake.project.cmake  Gcmake.test.cmake  Gcmake.toolchain.cmake  Gcmake.variables.cmake  Gcmake_End.cmake  Im_Namen_GOTTes.cmake
gcmake-build/module/function/: Gcmake.function.executable.cmake  Gcmake.function.file.cmake  Gcmake.function.library.cmake  Gcmake.function.link.cmake  Gcmake.function.package.cmake  Gcmake.function.test.cmake
gcmake-build/module/package/: Gcmake.package.debian.cmake
gcmake-build/module/toolchain/: Gcmake.toolchain.cross.cmake  Gcmake.toolchain.local.cmake
gcmake-build/module/validation/: Gcmake.validation.project.cmake
