set(GCMAKE_CMAKE_VERSION 3.22.1)
set(GCMAKE_PROJECT_NAMESPACE gcmake)
set(GCMAKE_PROJECT_NAME build)
set(GCMAKE_PROJECT_VERSION 1.1.2)
set(GCMAKE_PROJECT_DESCRIPTION "rapid cmake application development build tool")
set(GCMAKE_PROJECT_CONTACT "Gökay Cömert gokay.comert@icloud.com")
set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install" CACHE PATH "install directory" FORCE)

cmake_minimum_required (VERSION ${GCMAKE_CMAKE_VERSION})

project (${GCMAKE_PROJECT_NAME} VERSION ${GCMAKE_PROJECT_VERSION} DESCRIPTION ${GCMAKE_PROJECT_DESCRIPTION})

file(GLOB_RECURSE modules 
    "${CMAKE_SOURCE_DIR}/module/*.*"
)

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

install(FILES 
    ${modules} 
        DESTINATION 
            module/${GCMAKE_PROJECT_NAMESPACE}/${GCMAKE_PROJECT_NAME}
)

write_basic_package_version_file("${CMAKE_BINARY_DIR}/${GCMAKE_PROJECT_NAMESPACE}-${GCMAKE_PROJECT_NAME}ConfigVersion.cmake"
    VERSION 
        "${GCMAKE_PROJECT_VERSION}"
    COMPATIBILITY 
        AnyNewerVersion
)

configure_package_config_file("${CMAKE_SOURCE_DIR}/Config.cmake.in"
    "${CMAKE_BINARY_DIR}/${GCMAKE_PROJECT_NAMESPACE}-${GCMAKE_PROJECT_NAME}Config.cmake"
    INSTALL_DESTINATION 
        cmake
)

install(
    FILES
        "${CMAKE_BINARY_DIR}/${GCMAKE_PROJECT_NAMESPACE}-${GCMAKE_PROJECT_NAME}Config.cmake"
        "${CMAKE_BINARY_DIR}/${GCMAKE_PROJECT_NAMESPACE}-${GCMAKE_PROJECT_NAME}ConfigVersion.cmake"
    DESTINATION 
        cmake
)

set(CPACK_PACKAGE_NAME "${GCMAKE_PROJECT_NAMESPACE}-${GCMAKE_PROJECT_NAME}" CACHE STRING "package name")
set(CPACK_PACKAGE_CONTACT ${GCMAKE_PROJECT_CONTACT})
set(CPACK_OUTPUT_FILE_PREFIX "${CMAKE_SOURCE_DIR}/package")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
set(CPACK_COMPONENTS_GROUPING ALL_COMPONENTS_IN_ONE)
set(CPACK_VERBATIM_VARIABLES TRUE)
set(CPACK_STRIP_FILES TRUE)
set(CPACK_GENERATOR "DEB;RPM")

set(CPACK_DEB_COMPONENT_INSTALL ON)
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
set(CPACK_DEBIAN_PACKAGE_DEPENDS "gctest-core")
set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE all)

set(CPACK_RPM_COMPONENT_INSTALL ON)
set(CPACK_RPM_PACKAGE_AUTOREQ YES)
set(CPACK_RPM_PACKAGE_REQUIRES "gctest-core")
set(CPACK_RPM_FILE_NAME RPM-DEFAULT)
set(CPACK_RPM_PACKAGE_ARCHITECTURE noarch)

include(CPack)
